# tsocks

./: .gitignore  ChangeLog  INSTALL  INSTALL.solaris  Makefile  Makefile.in  Makefile.solaris  TODO  acconfig.h  common.c  common.h  config.cache  config.h  config.h.in  config.status  config.sub  configure  configure.in  inspectsocks.c  makeSolaris  parser.c  parser.h  saveme.c  tsocks.1  tsocks.3  tsocks.8  tsocks.announce  tsocks.c  tsocks.conf.5  tsocks.conf.complex.example  tsocks.conf.example  tsocks.h  tsocks.in  tsocks.katz.in  validateconf.c
Doc/: saveme.8  tsocks.1  tsocks.8  tsocks.conf.5
